fixed text wrap in description

--- a/src/scss/script-changes-style.scss
+++ b/src/scss/script-changes-style.scss
@@ -18,5 +18,5 @@
     resize: none;
     padding: 0;
     width: 100%;
-    white-space: pre;
+    white-space: pre-wrap;
 }
